# Ollama_Utils

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
ollama_utils/: __init__.py  judge_results.py
