[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama_tools"
version = "0.1.0"
description = "A Python package for tools related to Ollama"
readme = "README.md"
authors = [
    {name = "Mark Watson", email = "markw@markwatson.com"}
]
license = {file = "LICENSE"}
dependencies = [
    # Add your package dependencies here, e.g., "numpy >= 1.21.0"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/mark-watson/Ollama_Tools"
