[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama_tools"
version = "0.1.0"
description = "A Python package for tools related to Ollama"
readme = "README.md"
authors = [
    {name = "Mark Watson", email = "markw@markwatson.com"}
]
license = {file = "LICENSE"}

dependencies = [
 "requests",
 "beautifulsoup4",
 "aisuite[ollama]",
 "ollama",
] 

requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/mark-watson/Ollama_Tools"
